fix auto call on safari - insert VietinBank

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-
 /* Profile */
 .profile {
     cursor: default;
@@ -143,6 +142,10 @@ h4 {
 
 #details-mail p {
     font-size: 16px;
+}
+
+#details-phone p {
+    user-select: none;
 }
 
 .more-details-btn {
